# SE_Movement

./: CMakeLists.txt  README.md  package.xml
launch/: full_sim_setup.launch
msg/: EmergencyStop.msg  MovementTelemetry.msg  NavStatus.msg  TargetPose.msg
scripts/: movement_node.py  movement_server.py  publish_initial_pose.py
srv/: GoToPose.srv
